--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,12 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "CACHE_DATE1=$(date --utc +%Y%m%dT%H%M%SZ)" >> $GITHUB_ENV; echo $CACHE_DATE1
-    - run: echo 'CACHE_DATE2=$(date --utc +%Y%m%dT%H%M%SZ)' >> $GITHUB_ENV; echo $CACHE_DATE2
-    - run: echo 'CACHE_DATE3="$(date --utc +%Y%m%dT%H%M%SZ)"' >> $GITHUB_ENV; echo $CACHE_DATE3
-    - run: eval echo 'CACHE_DATE4="$(date --utc +%Y%m%dT%H%M%SZ)"' >> $GITHUB_ENV; echo $CACHE_DATE4
-    - run: eval echo "CACHE_DATE5='$(date --utc +%Y%m%dT%H%M%SZ)'" >> $GITHUB_ENV; echo $CACHE_DATE5
+    - run: echo "foo=${{ TRUE }}" >> $GITHUB_ENV
+    - run: echo "bar=${{ FALSE }}" >> $GITHUB_ENV
+    - run: echo '::set-output name=FOO_OUTPUT::$foo'
+      id: foo_step
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/output
+      with:
+        text: 'some custom text'
+    - run: echo "${{ steps.foo_step.outputs.FOO_OUTPUT }}"
