--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - run: echo "foo=${{ TRUE }}" >> $GITHUB_ENV
-    - run: echo "bar=${{ FALSE }}" >> $GITHUB_ENV
+    - run: echo "foo=${{ github.event_name == 'push' }}" >> $GITHUB_ENV
+    - run: echo "bar=${{ github.event_name != 'push' }}" >> $GITHUB_ENV
     - run: echo '::set-output name=FOO_OUTPUT::$foo'
       id: foo_step
     - uses: actions/checkout@v2
