--- a/.github/workflows/gh-release-create.yml
+++ b/.github/workflows/gh-release-create.yml
@@ -9,7 +9,7 @@ jobs:
         git config --global user.name "github-actions[bot]"
     - run: git commit --allow-empty -m "test"
     - run: git tag v0.1.0
-    - run: git push v0.1.0
+    - run: git push origin v0.1.0
     - run: |
         gh release create v0.1.0 \
           --title v0.1.0 \
