simplify gh release create, delete changes

--- a/.github/workflows/gh-release-create.yml
+++ b/.github/workflows/gh-release-create.yml
@@ -10,9 +10,15 @@ jobs:
     - run: git commit --allow-empty -m "test"
     - run: git tag v0.1.0
     - run: git push origin HEAD v0.1.0
-    - run: |
-        gh release create v0.1.0 \
-          --title v0.1.0 \
-          --target v0.1.0
+    - run: gh release create v0.1.0 --target v0.1.0
+      continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - run: gh release create v0.1.0 --target refs/tags/v0.1.0
+      continue-on-error: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - run: git tag -d v0.1.0
+    - run: git push -d origin v0.1.0
+    - run: git reset --hard HEAD~1
+    - run: git push --force
