remove ":" from name

--- a/.github/workflows/test-workflow-name.yml
+++ b/.github/workflows/test-workflow-name.yml
@@ -1,4 +1,4 @@
-name: This is the name: ${{ github.event.inputs.name }}
+name: This is the name ${{ github.event.inputs.name }}
 on:
   workflow_dispatch:
     inputs:
