--- a/.github/workflows/try-get-pr.yaml
+++ b/.github/workflows/try-get-pr.yaml
@@ -6,3 +6,5 @@ jobs:
     - run: echo $GITHUB_REF_NAME
     - run: |
         PR_NUMBER=$(gh pr view $GITHUB_REF_NAME --json 'number' --jq '.number')
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
