--- a/.github/workflows/dynamic-needs.yml
+++ b/.github/workflows/dynamic-needs.yml
@@ -11,6 +11,12 @@ jobs:
     - run: echo "${{ github.job }}"
   job2:
     runs-on: ubuntu-latest
-    needs: ${{ github.event.inputs.run_parallel && [] || [job1] }}
+    steps:
+    - run: echo "${{ github.job }}"
+  job3:
+    runs-on: ubuntu-latest
+    needs:
+    - job1
+    - ${{ github.event.inputs.run_parallel && '' || 'job2' }}
     steps:
     - run: echo "${{ github.job }}"
