--- a/.github/workflows/if-condition-syntax.yml
+++ b/.github/workflows/if-condition-syntax.yml
@@ -9,5 +9,5 @@ jobs:
       run: echo "hello"
     - if: true && false
       run: echo "hello"
-    - if: !false || false
+    - if: ${{ !false || false }}
       run: echo "hello"
