--- a/.github/workflows/if-condition-syntax.yml
+++ b/.github/workflows/if-condition-syntax.yml
@@ -1,4 +1,9 @@
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      set_me_to_true:
+        required: true
+        type: boolean
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -11,3 +16,11 @@ jobs:
       run: echo "hello"
     - if: ${{ !false || false }}
       run: echo "hello"
+    - if: '!github.event.inputs.set_me_to_true'
+      run: echo "this should not run"
+    - if: "!github.event.inputs.set_me_to_true"
+      run: echo "this should not run"
+    - if: (!github.event.inputs.set_me_to_true)
+      run: echo "this should not run"
+    - if: ${{ !github.event.inputs.set_me_to_true }}
+      run: echo "this should not run"
