--- a/.github/workflows/github-context.yml
+++ b/.github/workflows/github-context.yml
@@ -7,3 +7,7 @@ jobs:
     - run: echo "${{ github.workflow }}"
     - run: echo "${{ github.workflow_ref }}"
     - run: echo "${{ github.repository }}/.github/workflows/github-context.yml@refs/heads/${{ github.event.repository.default_branch }}"
+    - if: github.event_name == 'workflow_call' && github.workflow_ref == "${{ github.repository }}/.github/workflows/release.yaml@refs/heads/${{ github.event.repository.default_branch }}"
+      run: echo "$condition"
+      env:
+        condition: github.event_name == 'workflow_call' && github.workflow_ref == "${{ github.repository }}/.github/workflows/release.yaml@refs/heads/${{ github.event.repository.default_branch }}"
