--- a/.github/workflows/github-context.yml
+++ b/.github/workflows/github-context.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
     - run: echo "${{ github.workflow }}"
     - run: echo "${{ github.workflow_ref }}"
+    - run: echo "${{ github.ref }}"
+    - run: echo "${{ github.ref_name }}"
+    - run: echo "${{ github.event.repository.default_branch }}"
     - run: echo "${{ github.repository }}/.github/workflows/github-context.yml@refs/heads/${{ github.event.repository.default_branch }}"
     - if: github.event_name == 'workflow_call' && github.workflow_ref == format('{0}/.github/workflows/release.yaml@refs/heads/{1}', github.repository, github.event.repository.default_branch)
       run: echo "$condition"
